@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Fix development prereqs for projects that use precious. This was still using
+  very old Perl::Tidy and Perl::Critic versions.
+
+
 1.17     2021-01-24
 
 - Fix the generated precious.toml to expect stderr output from omegasort.
